splunk-basic/splunk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-standalone
  namespace: splunk-operator
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/default-backend: splunk-standalone-standalone-service
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # pieces for LetsEncrypt integration
    nginx.ingress.kubernetes.io/affinity: cookie
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: splunk.defnotavirus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-s1-standalone-service
            port:
              number: 8000
  # more bits for letsencrypt            
  tls:
  - hosts:
    - splunk.defnotavirus.com
    secretName: splunk.defnotavirus.com-tls
